      plugin_staticpage_related.tpl) must be modified to include the condition
      {if $staticpage_show_breadcrumb}...{/if}.  See included plugin_staticpage.tpl
      for example.

3.96: Added last commits missing code part for the javascript hidden boxes (Timbalu)
      Workaround the use of document.write() for javascript enabled browsers

3.95: Fixed bad XHTML in <option> tag (Timbalu), 
      added ability to preview staticpages, restrict viewing draft staticpages to logged in authors
      added option to set META input fields, set structure and meta field box to javascript hidden content (Timbalu)

3.94: Add "timestamp" field to list of editable staticpage fields

3.93: Add $serendipity['is_staticpage'] global variable to indicate if staticpage is selected

3.92: extends 1.19: (sidebar) fixed sidebar title

3.91: added dependency nl2br(2.14)::$isobr [NoBR] Buttons
      fixed serendipity_db_query search error output
      set smarty fetch to use nativ API - extends s9y version >= 1.3'

3.90: fixed typo and shrinked last note

3.89: note sidebar plugin availability & update (sidebar 1.18) Fixed smarty load in backend (Timbalu)

3.88: Fixed guestbook link generation for non-rewrites (Timbalu)

1.16: (sidebar) Added smartify option (by Timbalu)

3.87: Add foreach check to prevent error

3.86: Improved 404 page handling (Manko10)

3.84: Added server "Status:" header as well

3.83:
---------------------------

Add missing changes in backend template for selecting a staticpage as 404 error document

3.82:
---------------------------

Add possibility to use a staticpage as 404 error document
by setting the corresponding page property

3.81:
---------------------------

Smarty3 forward compatibility

3.80:
---------------------------

PHP 5.3 compat

3.79:
---------------------------

Beter rename of dirs, by stm9x9
http://board.s9y.org/viewtopic.php?f=3&t=15461

3.78:
---------------------------